Genesis (French)
Genesis (French Free Play)
Genesis (German)
Genesis (German Free Play)
Gold Wings (Free Play)
Gold Wings (French)
Gold Wings (French Free Play)
Gold Wings (German)
Gold Wings (German Free Play)
Harley-Davidson (Bally, L-2 and D-2)
Haunted House (rev. 3 unofficial MOD)
Haunted House (rev. 3 unofficial MOD, LED)
Haunted House (rev. 3 unofficial MOD, LED+Secret Tunnel)
Hollywood Heat (Free Play)
Hollywood Heat (French)
Hollywood Heat (French Free Play)
Hollywood Heat (German)
Hollywood Heat (German Free Play)
Hot Shots (Free Play)        (enabled by setting the maximum number of credits to 20 (both DIP 15 and 16 ON))
Hot Shots (French)
Hot Shots (French Free Play) (enabled by setting the maximum number of credits to 20 (both DIP 15 and 16 ON))
Hot Shots (German)
Hot Shots (German Free Play) (enabled by setting the maximum number of credits to 20 (both DIP 15 and 16 ON))
Mars - God of War (Prototype)
Mars - God of War (rev. 2 unofficial MOD, fixes a potential startup problem)
Monte Carlo (Free Play)
Monte Carlo (French)
Monte Carlo (French Free Play)
Monte Carlo (German)
Monte Carlo (German Free Play)
Monte Carlo (rev. 1 Free Play)
Monte Carlo (rev. 2)
Monte Carlo (rev. 2 Free Play)
MotorDome (German)
Night Moves (Free Play)
Pink Panther (sound correction fix)
Raven (Free Play)
Raven (German)
Raven (German Free Play)
Raven (rev. 1 Free Play)
Road Show (Prototype P-3 Sound ROM, combined with LX-2 Game ROM for now)
Robo-War (Free Play)
Robo-War (French)
Robo-War (French Free Play)
Rock (Free Play)
Rock (German)
Rock (German Free Play)
Rock Encore (Free Play)
Rock Encore (German)
Rock Encore (German Free Play)
Rocky (French speech)
Rollergames (AD-2 Prototype) (sample/prototype with 8 drop targets)
Rollergames (LF-2 French)
Rollergames (LF-3 French)
Spring Break (Free Play)
Spring Break (French)
Spring Break (French Free Play)
Spring Break (German)
Spring Break (German Free Play)
Spring Break (rev. 1 Free Play)
Spring Break (single ball game, Free Play)